# grafana-query-mcp

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pip.ini.example  pyproject.toml  requirements-3.8.txt
app/: __init__.py  auth.py  config.py  discovery.py  main.py
app/clients/: grafana.py
app/converter/: grafana.py
app/utils/: cache.py
cache/: discovery.json
docs/: api.md  architecture.md  data-model.md  deploy.md  development.md  examples.md  setup.md  structure.md
tests/: conftest.py  test_converter.py
